--- a/src/main/resources/templates/listContact.html
+++ b/src/main/resources/templates/listContact.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>List of contacts</h1>
+    <br>
+    <table border=1>
+        <tr data-th-each="contact :${contacts}">
+            <td data-th-text="${contact.name}"></td>
+            <td data-th-text="${contact.email}"></td>
+            <td data-th-text="${contact.phoneNumber}"></td>
+            <td data-th-text="${contact.dateOfBirth}"></td>
+        </tr>
+    </table>
 </body>
 </html>
