--- a/src/main/resources/templates/showContact.html
+++ b/src/main/resources/templates/showContact.html
@@ -8,8 +8,22 @@
 </head>
 <body data-th-object="${contact}">
     <h1>Your contact information</h1>
-    <p>Contact Id</p>
+    <p>Contact id</p>
+    <p data-th-text="*{id}"></p>
     <br>
     <p>Name</p>
+    <p data-th-text="*{name}"></p>
+    <br>
+    <p>Email</p>
+    <p data-th-text="*{email}"></p>
+    <br>
+    <p>Phone No.</p>
+    <p data-th-text="*{phoneNumber}"></p>
+    <br>
+    <p>Date of Birth</p>
+    <p data-th-text="*{dateOfBirth}"></p>
+    <br>
+    
+    
 </body>
 </html>
